--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http: ^0.13.4
   shared_preferences:
   animated_text_kit: ^4.2.2
+  image_picker: ^0.8.5+3
   flutter:
     sdk: flutter
 
